erDiagram
    EVENTS ||--o{ ATTENDANCE_RECORDS : "มีผู้เข้าร่วม"
    ADMIN_USERS ||--o{ EVENTS : "เป็นผู้สร้าง"
    ADMIN_USERS ||--o{ SYSTEM_LOGS : "มีกิจกรรม"
    ADMIN_USERS ||--o{ ATTENDANCE_RECORDS : "เป็นผู้บันทึก"
    STUDENT_DETAILS ||--o{ ATTENDANCE_RECORDS : "เข้าร่วม"
    
    EVENTS {
        int id PK
        string event_name
        string event_type
        string location
        datetime start_time
        datetime end_time
        string description
        string faculty
        string department
        string year_level
        string created_by
        datetime created_at
        string status
    }
    
    ATTENDANCE_RECORDS {
        int id PK
        int event_id FK
        string student_id
        string student_name
        string faculty
        string department
        datetime check_in_time
        datetime check_out_time
        string status
        string recorded_by
        string notes
    }
    
    ADMIN_USERS {
        int id PK
        string username
        string password_hash
        string fullname
        string email
        string role
        string department
        string faculty
        datetime created_at
        datetime last_login
        string status
    }
    
    SYSTEM_LOGS {
        int id PK
        string action
        string description
        int user_id FK
        string ip_address
        datetime created_at
    }
    
    STUDENT_DETAILS {
        string student_id PK
        string first_name
        string last_name
        string faculty
        string department
        string year_level
        datetime enrollment_date
        datetime expiry_date
        string student_status
        string profile_image
    }
